--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="grid md:grid-cols-2 md:px-10 items-center md:gap-8 max-w-6xl space-x-3 mt-24 mx-auto">
                 <div class="max-md:order-1 max-md:text-center mx-3">
                     <h2 class="text-gray-800 md:text-5xl text-3xl font-extrabold mb-4 md:!leading-[55px] text-white">Temukan Tingkat Stres Anda dengan Tes <span class="text-yellow-200"> Sederhana</span></h2>
-                    <p class="mt-4 text-base text-gray-600 leading-relaxed">Cek kesehatan mental GANDI dengan menjawab 15 pertanyaan sederhana yang dikembangkan oleh WHO.</p>
+                    <p class="mt-4 text-base text-gray-600 leading-relaxed">Cek kesehatan mental GANDI dan TEGAR dengan menjawab 15 pertanyaan sederhana yang dikembangkan oleh WHO.</p>
                     <div class="mt-8">
                         <a href="pre-quiz.html"><button type='button' class="bg-yellow-300 hover:bg-transparent hover:text-black border-2 border-yellow-300 transition-all text-black font-semibold tracking-wide text-sm rounded-full px-6 py-2.5">Mulai Sekarang</button></a>
                     </div>
