--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>MoodUpKu</title>
+  <title>MoodUppppKu</title>
   <style type="text/tailwindcss">
     @layer utilities {
         body{
